--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Context Documents
+companion_context.txt
+COMPANION_LAB_CONTEXT.md 
+EDUCATIONAL_TRANSFORMATION_GUIDE.md 
+
